# MediaMind

./: README.Chrome.md  README.Firefox.md  README.md
native/: Cargo.toml
native/src/: main.rs
setup/: Cargo.toml
setup/src/: main.rs
webext/: package.json  tsconfig.json  webextension-toolbox-config.js
webext/app/: background.ts  common.ts  manifest.json
webext/app/sites/: soundcloud.ts  spotify.ts  youtube.ts
